# aoc_21

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
aoc/day01/: README.md  __main__.py  part1.py  part2.py
aoc/day02/: README.md  part1.py  part2.py
aoc/day03/: README.md  part1.py  part2.py
aoc/day04/: README.md  part1.py  part2.py
aoc/day05/: README.md  part1.py  part2.py
aoc/day06/: README.md  part1.py  part2.py
aoc/day07/: README.md  part1.py  part2.py
aoc/day08/: README.md  part1.py  part2.py
aoc/day09/: README.md  part1.py  part2.py
aoc/day10/: README.md  __main__.py  part1.py  part2.py  solution.py
aoc/day11/: README.md  __main__.py  solution.py
aoc/day12/: README.md  __main__.py  solution.py
aoc/day13/: README.md  __main__.py  solution.py
aoc/day14/: README.md  __main__.py  solution.py
aoc/day17/: README.md  __main__.py  solution.py
aoc/day20/: README.md  __main__.py  solution.py
aoc/day21/: README.md  __main__.py  solution.py
tests/: test_day0.py  test_day01.py  test_day02.py  test_day03.py  test_day06.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day17.py  test_day20.py
