[tool.poetry]
name = "aoc"
version = "0.1.1"
description = "Docker Python template for Advent of Code event"
authors = ["Leonardo Gago <ljgago@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
python-dotenv = "^0.19.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
